plugins {
  id 'java-library'
  id 'maven-publish'
  id "io.codearte.nexus-staging" version "0.30.0"
}

group       = 'org.pageseeder'
version     = file('version.txt').text
description = "$title"

apply from: 'gradle/publish-mavencentral.gradle'

repositories {
  mavenCentral { url 'https://maven-central.storage.googleapis.com/maven2' }
  maven { url 'https://s01.oss.sonatype.org/content/groups/public/' }
}

// Use Java toolchain to ensure the correct JVM is used by Gradle
java.toolchain {
  languageVersion.set(JavaLanguageVersion.of(11))
}

tasks.withType(JavaCompile).configureEach {
  options.release = 11 // Target Java 11 compatibility
  options.encoding = 'UTF-8'
}

dependencies {

  api (
    'org.slf4j:slf4j-api:1.7.36',
    'org.pageseeder.xmlwriter:pso-xmlwriter:1.0.4',
    'org.pageseeder.diffx:pso-diffx:1.2.0'
  )

  compileOnly 'org.eclipse.jdt:org.eclipse.jdt.annotation:2.3.100'

  testImplementation (
    'junit:junit:4.13.1',
    'org.slf4j:slf4j-simple:1.7.21',
    'org.hamcrest:java-hamcrest:2.0.0.0',
    'org.hamcrest:hamcrest-junit:2.0.0.0',
    'org.xmlunit:xmlunit-core:2.10.0',
    'org.xmlunit:xmlunit-matchers:2.10.0',
    'commons-io:commons-io:2.19.0',
    'org.eclipse.jdt:org.eclipse.jdt.annotation:2.3.100'
  )

  testRuntimeOnly (
    'net.sf.saxon:Saxon-HE:9.9.1-5',
  )

  testRuntimeOnly("org.mozilla:rhino-engine:1.7.14") {
    because("Required by TeX/AsciiMath conversion in Java 15+")
  }

}
